src/test/deca/syntax/valid/class_obj_method_02.deca
// Description:
//    Programme testant la déclaration d'une classe avec instanciation.
//
// Resultats:
//		5
//		6
//      10
//
// Historique:
//    cree le 16/01/2023

class A {
	int a;
	int add(int b) {
		return a + b;
	}
}

class B extends A {
	int a;
	int b;
	int add() {
		return a + b;
	}
	int add(int b) {
		return a + b;
	}
}
{
	A a = new A();
	B b = new B();
	a.a = 1;
	b.a = 2;
	b.b = 3;
	int1 = b.add();
	print(int1);
	int2 = b.add(4);
	print(int2);
	a.a = b.add();
	int3 = a.add(5);
	print(int3);
}